Weird spacing issue

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -124,7 +124,7 @@ html {
   h3{
     position: absolute;
     left: 30px;
-    top: 64px;
+    top: 15px;
     font-style: normal;
     font-weight: bold;
     font-size: 53px;
